# fyi

./: .env  .gitignore  AI_ENGINE_FIX_SUMMARY.txt  ARCHITECTURE.txt  DASHBOARD_INTEGRATION.md  DELIVERABLES.txt  DEPLOYMENT_GUIDE.md  DESKTOP_APP_SUMMARY.md  DESKTOP_DEV_NOTES.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  FACEBOOK_OAUTH_SETUP.md  FINAL_COMPLETION_REPORT.md  FINAL_INSTAGRAM_SOLUTION.md  FOLDER_AUDIT_REPORT.txt  File Structure.txt  HOW_TO_RUN.txt  IMPROVEMENTS.md  IMPROVEMENTS_CHECKLIST.md  IMPROVEMENTS_INDEX.md  IMPROVEMENTS_SUMMARY.txt  OAUTH_SCOPES_FIX.md  PHASE_2_COMPLETE.txt  PHASE_2_QUICK_REFERENCE.md  PHASE_2_README.md  PHASE_3_COMPLETION_REPORT.md  PROJECT_STATUS.txt  QUICK_START_DESKTOP.md  README.md  SESSION_SUMMARY.md  SETUP.md  SETUP_INSTRUCTIONS.md  TASK_12_COMPLETION.md  TESTING_GUIDE.md  UI_CUSTOMIZATION.md  UI_IMPROVEMENTS_SUMMARY.txt  UI_OVERHAUL_COMPLETE.txt  UI_QUICK_GUIDE.md  UPGRADE_SUMMARY.txt  USER_GUIDE.txt  (+80 more)
.github/: copilot-instructions.md
ai-engine/: __init__.py  clip_scoring.py  growth_mentor.py  hook_generator.py  ollama_manager.py  template_engine.py  thumbnail_ai.py
ai_engine/: __init__.py  clip_scoring.py  hook_generator.py  ollama_manager.py  template_engine.py  thumbnail_ai.py
backend/: __init__.py  app.py  config.py  database.py  main.py
core/: __init__.py  auth.py  config.py  models.py  utils.py
data/: .encryption_key  .oauth_state  active_accounts.json  api_token  byok_keys.json  fyi_social_media.db  fyi_webportal.db  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: cmd.rs  main.rs
(+113 files in other folders)
